--- a/build.xml
+++ b/build.xml
@@ -7,9 +7,9 @@
 <project name="spark-assembly" default="build-jar" basedir="./">
 
     <property name="app.name" value="spark-assembly"/>
-    <property name="package.name" value="spark-assembly-2.0.2-hadoop2.4.0.jar"/>
+    <property name="package.name" value="spark-assembly-2.3.1-hadoop2.7.0.jar"/>
 
-    <property name="spark2.jars.dir" value="/opt/spark/jars"/>
+    <property name="spark2.jars.dir" value="../spark/jars"/>
 
     <property name="dest.dir" value="target"/>
 
@@ -22,6 +22,9 @@
       <mkdir dir="${dest.dir}/spark2"/>
 
       <unzip dest="${dest.dir}/spark2">
+          <patternset>
+             <exclude name="META-INF/**/*"/>
+          </patternset>
           <fileset dir="${spark2.jars.dir}"/>
       </unzip>
       <jar destfile="${dest.dir}/${package.name}" basedir="${dest.dir}/spark2" excludes="META-INF/**/*" zip64Mode="always"/>
